@@ -1,21 +1,16 @@
 package io;
 
 import Model.*;
+
 import java.io.IOException;
 import java.util.*;
 
 public class CsvFileReader {
-    private final TxtFileReader txtFileReader;
-    private final Inventory inventory;
 
-    public CsvFileReader(Inventory inventory) {
-        this.txtFileReader = new TxtFileReader();
-        this.inventory= inventory;
-    }
+    private final TxtFileReader txtFileReader;
 
     public CsvFileReader() {
         this.txtFileReader = new TxtFileReader();
-        inventory=null;
     }
 
     public List<User> loadUsers() throws IOException {
@@ -27,22 +22,16 @@ public class CsvFileReader {
         List<User> users = new ArrayList<>();
 
         if (!lines.isEmpty()) {
-            lines.removeFirst();
+            lines.remove(0);
         }
-        for (String line:lines){
 
+        for (String line : lines) {
             String[] data = line.split(",");
-
-
-            String username = data[0];
-            String email = data[1];
-            String password = data[2];
-            String role = data[3];
-            users.add(new User(username,email,password,role));
+            users.add(new User(data[0], data[1], data[2], data[3]));
         }
+
         return users;
     }
-
 
     public HashMap<String, ReviewNotes> loadReviewAndNotes() {
         return loadReviewAndNotes("Data/ReviewAndNotes.csv");
@@ -50,7 +39,6 @@ public class CsvFileReader {
 
     public HashMap<String, ReviewNotes> loadReviewAndNotes(String filePath) {
         List<String> lines;
-        ReviewNotes reviewNotes;
         HashMap<String, ReviewNotes> reviewAndNotes = new HashMap<>();
 
         try {
@@ -69,9 +57,9 @@ public class CsvFileReader {
             String review = parseCsvField(data[1]);
             String notes = parseCsvField(data[2]);
 
-            reviewNotes = new ReviewNotes(review, notes);
-            reviewAndNotes.put(productLine, reviewNotes);
+            reviewAndNotes.put(productLine, new ReviewNotes(review, notes));
         }
+
         return reviewAndNotes;
     }
 
@@ -79,91 +67,80 @@ public class CsvFileReader {
         return loadItems("Data/Items.csv");
     }
 
-    public ArrayList<Product> loadProducts(Inventory inventory) {
-        return loadProducts("Data/Products.csv", inventory);
-    }
-
     public ArrayList<Item> loadItems(String filesPath) {
         List<String> lines;
         ArrayList<Item> items = new ArrayList<>();
+
         try {
             lines = txtFileReader.readAllLines(filesPath);
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
+
         if (!lines.isEmpty()) {
             lines.remove(0);
         }
+
         for (String line : lines) {
             String[] csv = line.split(",");
-            int id = Integer.parseInt(csv[0]);
-            String name = csv[1];
-            int quantity = Integer.parseInt(csv[2]);
-            int price = Integer.parseInt(csv[3]);
-            String category = csv[4];
-            int minStockLevel = Integer.parseInt(csv[5]);
-            Item item = new Item(id, name, quantity, price, category, minStockLevel);
-            items.add(item);
+            items.add(new Item(
+                    Integer.parseInt(csv[0]),
+                    parseCsvField(csv[1]),
+                    Integer.parseInt(csv[2]),
+                    Integer.parseInt(csv[3]),
+                    parseCsvField(csv[4]),
+                    Integer.parseInt(csv[5])
+            ));
         }
+
         return items;
     }
 
-    public ArrayList<Product> loadProducts(String filePath, Inventory inventory) {
+    public ArrayList<Product> loadProducts(Map<String, Item> requirements) {
+        return loadProducts("Data/Products.csv", requirements);
+    }
 
+    public ArrayList<Product> loadProducts(String filesPath, Map<String, Item> requirements) {
         List<String> lines;
         ArrayList<Product> products = new ArrayList<>();
 
         try {
-            lines = txtFileReader.readAllLines(filePath);
+            lines = txtFileReader.readAllLines(filesPath);
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
 
-        // Remove header
         if (!lines.isEmpty()) {
             lines.remove(0);
         }
 
         for (String line : lines) {
-
             String[] csv = line.split(",");
-
             int id = Integer.parseInt(csv[0]);
-            String name = csv[1];
+            String name = parseCsvField(csv[1]);
             int quantity = Integer.parseInt(csv[2]);
 
-            // Map instead of ArrayList
-            Map<Integer, Item> requiredItems = new HashMap<>();
-
-            String[] itemIds = csv[3].split(";");
-            for (String itemIdStr : itemIds) {
-
-                int itemId = Integer.parseInt(itemIdStr);
-                Item item = inventory.getItemById(itemId);
-
+            ArrayList<Item> items = new ArrayList<>();
+            for (String itemName : csv[3].split(";"))
+            {
+                Item item = requirements.get(itemName);
                 if (item == null) {
-                    throw new RuntimeException("Item ID not found: " + itemId);
+                    throw new RuntimeException("Item not found by name: " + itemName);
                 }
-
-                requiredItems.put(itemId, item);
+                items.add(item);
             }
 
-            Product product = new Product(id, name, quantity, requiredItems);
-            products.add(product);
+            products.add(new Product(id, name, quantity, items));
         }
 
         return products;
     }
 
-
-
     private String parseCsvField(String field) {
         field = field.trim();
-
         if (field.startsWith("\"") && field.endsWith("\"")) {
             field = field.substring(1, field.length() - 1);
         }
-
         return field.replace("\"\"", "\"");
     }
 }
